# entropy

./: Cargo.toml  DEPLOY.md  INTEGRATION.md  README.md  SECURITY.md
api/: Cargo.toml  idl.json
api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
api/src/state/: commitment.rs  mod.rs  var.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: close.rs  commit.rs  init.rs  lib.rs  next.rs  open.rs  reveal.rs  sample.rs  update.rs
