[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://ore.supply/entropy"
description = "Secure random number generator on Solana."
documentation = "https://docs.rs/entropy-api/latest/entropy_api/"
repository = "https://github.com/regolith-labs/entropy"
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
bincode = "1.3.3"
bytemuck = "1.14"
entropy-api = { path = "./api", version = "0.1.0" }
num_enum = "0.7"
solana-program = "^2.1"
steel = "4.0.2"
thiserror = "1.0"
