[package]
name = "entropy-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
publish = false

[dependencies]
entropy-api.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
steel.workspace = true
tokio.workspace = true
